# agent_yt

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  instructions.yaml  pyproject.toml
.github/workflows/: deploy.yml
tests/: test_agent.py  test_instructions.py
yt_agent/: __init__.py  agent.py  config.py  instructions.py  main.py  video_generator.py  youtube_client.py
